fix : fixed side nav height on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -349,6 +349,7 @@ button:disabled {
 		position: fixed;
 		left: 0;
 		height: 100vh;
+		max-height: none;
 		z-index: 120;
 		width: 0%;
 		padding : 0;
